worktree/check_output.txt
    Checking worktree v0.3.3 (/Users/justinsmith/Projects/test/worktrees-hub/dev/worktree)
warning: unused import: `AsyncAction`
 --> worktree/src/app/event_handlers/listing.rs:1:31
  |
1 | use crate::app::async_tasks::{AsyncAction, AsyncResult};
  |                               ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `AsyncAction`
 --> worktree/src/app/view.rs:8:31
  |
8 | use crate::app::async_tasks::{AsyncAction, AsyncResult};
  |                               ^^^^^^^^^^^

error[E0063]: missing field `loading` in initializer of `DashboardState`
   --> worktree/src/app/event_handlers/listing.rs:261:44
    |
261 | ...                   dashboard: DashboardState {
    |                                  ^^^^^^^^^^^^^^ missing `loading`

error[E0063]: missing field `loading` in initializer of `DashboardState`
   --> worktree/src/app/event_handlers/listing.rs:534:44
    |
534 | ...                   dashboard: DashboardState {
    |                                  ^^^^^^^^^^^^^^ missing `loading`

error[E0063]: missing field `loading` in initializer of `DashboardState`
  --> worktree/src/app/event_handlers/prompt.rs:58:48
   |
58 | ...board: crate::app::model::DashboardState {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `loading`

error[E0063]: missing field `loading` in initializer of `DashboardState`
  --> worktree/src/app/event_handlers/prompt.rs:75:40
   |
75 | ...board: crate::app::model::DashboardState {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `loading`

warning: unreachable pattern
   --> worktree/src/app/view.rs:251:21
    |
251 |                     _ => {}
    |                     ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> worktree/src/app/view.rs:251:21
    |
154 | ...   AsyncResult::StatusFetched { path, result } => {
    |       ------------------------------------------- matches some of the same values
...
172 | ...   AsyncResult::HistoryFetched { path, result } => {
    |       -------------------------------------------- matches some of the same values
...
190 | ...   AsyncResult::FetchCompleted { branch, result } => {
    |       ---------------------------------------------- matches some of the same values
...
200 | ...   AsyncResult::PullCompleted { branch, result } => {
    |       --------------------------------------------- matches some of the same values
...
251 | ...   _ => {}
    |       ^ ...and 2 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `branch`
   --> worktree/src/app/view.rs:190:51
    |
190 | ...FetchCompleted { branch, result } => {
    |                     ^^^^^^ help: try ignoring the field: `branch: _`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0063`.
warning: `worktree` (lib) generated 4 warnings
error: could not compile `worktree` (lib) due to 4 previous errors; 4 warnings emitted
